# biosequences

./: .gitignore  .travis.yml  Biosequence.cpp  Biosequence.h  CMakeLists.txt  LICENSE.md  README.md  alphabets.h  biosymbols.h  bitops.h  build.sh
test/: biosequence_checks.cpp  biosymbols_checks.cpp
tests/: SeqIndexer_checks.cpp  biosequence_checks.cpp  biosymbols_checks.cpp  bitops_checks.cpp
